data/derived/comb/progs/unify/prog5468.ml.out
Characters 439-442:
  let d = (eval(m, x, y))**(eval(n, x, y)) in if d > 1.0 || d < -1.0 then 1.0
                                                                          ^^^
Error: This expression has type float but an expression was expected of type
         unit
